--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "haven-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://mmsamara.github.io/haven-smokes",
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -12,6 +13,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
